--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,27 @@
-<h1>Log In</h1>
+<div class="row justify-content-md-center">
+  <h1>Log In</h1>
+</div>
 
-<p>
-  login works!
-</p>
+<div class="row justify-content-md-center">
+  <form [formGroup]="loginForm" class="col-md-4" (ngSubmit)="onSubmit()" novalidate>
+    <div class="form-group">
+      <label for="input-email">Email</label>
+      <input formControlName="email" type="email" class="form-control" id="input-email" aria-describedby="emailHelp" placeholder="Email">
+    </div>
+
+    <div class="form-group">
+      <label for="input-password">Password</label>
+      <input formControlName="password" type="password" class="form-control" id="input-password" placeholder="Password">
+    </div>
+
+    <div class="form-group">
+      <div class="alert alert-danger error-messages" role="alert" *ngIf="formErrors.length">
+        {{ formErrors }}
+      </div>
+    </div>
+
+    <button type="submit"
+            [disabled]="loginForm.pristine"
+            class="btn btn-success login-button">Log In</button>
+  </form>
+</div>
