adding signup component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,7 +8,10 @@
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link login-link" routerLink="/login" href="/login">Log In</a>
+        <a class="nav-link signup-link" routerLink="/signup">Sign Up</a>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <a class="nav-link login-link" routerLink="/login">Log In</a>
       </li>
       <!--<li class="nav-item dropdown">-->
         <!--<a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>-->
