--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="/">Testing Workshop</a>
+  <a class="navbar-brand" href="/">Comic Search</a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,12 +7,12 @@
 
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link signup-link" routerLink="/signup">Sign Up</a>
-      </li>
-      <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link login-link" routerLink="/login">Log In</a>
-      </li>
+      <!--<li class="nav-item" routerLinkActive="active">-->
+        <!--<a class="nav-link signup-link" routerLink="/signup">Sign Up</a>-->
+      <!--</li>-->
+      <!--<li class="nav-item" routerLinkActive="active">-->
+        <!--<a class="nav-link login-link" routerLink="/login">Log In</a>-->
+      <!--</li>-->
       <!--<li class="nav-item dropdown">-->
         <!--<a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>-->
         <!--<div class="dropdown-menu" aria-labelledby="dropdown01">-->
