--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,4 +1,4 @@
 $icon-font-path: '../node_modules/bootstrap-sass/assets/fonts/bootstrap/';
 
 //$primary: red; // example of overriding bootstrap variables
-$body-bg: #999999;
+$body-bg: #e1e1e1;
