--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -21,20 +21,20 @@
 				<hr>
 			</div>
 		</div>
-		<div class="issue row">
+		<div class="issue row" *ngFor="let issue of searchResults">
 			<div class="col-2 text-left">
-				<img class="img-thumbnail" src="https://static.comicvine.com/uploads/square_small/0/3848/5807889-stl002782.jpg">
+				<img class="img-thumbnail" [src]="issue.image_url">
 			</div>
 			<div class="col">
 				<div class="row">
 					<div class="col text-left">
-						<h4 class="title">The Gemstone Project</h4>
+						<h4 class="title">{{issue.title}}</h4>
 					</div>
 
 				</div>
 				<div class="row">
 					<div class="col text-left">
-						<div class="description">Gemstone Project Description</div>
+						<div class="description">{{issue.description}}</div>
 					</div>
 				</div>
 			</div>
